--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <br>
 <h3>Calculate </h3>
 
-<p>Please enter trial size (20 or 50):<br>
+<p>Please enter trial size:<br>
 <input id="trialSize" value=20> 
 </p>
 
-<p>Please enter Y observed (between 0 and 100%):<br>
+<p>Please enter Y observed:<br>
 <input id="yObserved">
 </p>
 
